<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".page_cen_savepic"
    tools:showIn="@layout/app_bar_page_cen_savepic">


    <ImageView
        android:id="@+id/image_viewpic"
        android:layout_width="170dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37sp"
        app:srcCompat="@drawable/beer" />

    <TextView
        android:id="@+id/textV_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50sp"
        android:layout_marginTop="210sp"
        android:fontFamily="@font/prompt_thin"
        android:text="ลดค่าใช้จ่ายได้"
        android:textSize="18sp"
        android:textStyle="normal" />

    <!--<TextView-->
        <!--android:id="@+id/textV_money"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignStart="@+id/textV_question"-->
        <!--android:layout_alignTop="@id/textV_question"-->
        <!--android:layout_marginTop="35sp"-->
        <!--android:fontFamily="@font/prompt_thin"-->
        <!--android:text="@string/text_line2"-->
        <!--android:textSize="18sp" />-->

    <EditText
        android:id="@+id/box_money"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/textV_question"
        android:layout_marginStart="70sp"
        android:layout_marginTop="40sp"
        android:ems="10"
        android:fontFamily="@font/prompt_thin"
        android:hint="กรุณากรอกจำนวนเงิน"
        android:inputType="textPersonName"
        android:text="@string/text_money"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textV_baht"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textV_question"
        android:fontFamily="@font/prompt_thin"
        android:text="@string/text_line3"
        android:textSize="18sp"
        android:layout_marginTop="50sp"
        android:layout_alignLeft="@+id/box_money"
        android:layout_marginLeft="220sp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button_savepic"
        android:layout_width="270sp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="420sp"
        android:layout_marginStart="220sp"
        android:background="@drawable/btn_newregi"
        android:fontFamily="@font/prompt_thin"
        android:text="@string/save_data"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>